# zestors

./: Cargo.toml  README.md  TODO.md  readme.md  rustfmt.toml  todo.md
src/: _gen.rs  (+25 more)
zestors/: Cargo.toml  README.md
zestors-actor/: Cargo.toml
zestors-actor/src/: actor.rs  event.rs  event_loop.rs  lib.rs  scheduler.rs
zestors-channels/: Cargo.toml
zestors-channels/src/: halter.rs  halter_channel.rs  lib.rs
zestors-channels/src/inbox/: inbox.rs  mod.rs  receiving.rs  sending.rs
zestors-channels/src/inbox_channel/: mod.rs  receiving.rs  sending.rs
zestors-channels/src/receiving/: inbox.rs  mod.rs
zestors-codegen/: Cargo.toml  README.md
zestors-codegen/src/: actor.rs  envelope.rs  handler.rs  lib.rs  message.rs  protocol.rs
zestors-codegen/tests/: protocol_message.rs
zestors-core/: Cargo.toml  README.md
zestors-core/docs/: channel.md  protocol.md  sending.md  spawning.md
zestors-core/examples/: basic.rs  childpool_and_config.rs  supervision.rs
zestors-core/src/: _gen.rs  _priv.rs  accepts.rs  actor.rs  actor_type.rs  address.rs  address_type.rs  box_channel.rs  boxed_msg.rs  child.rs  child_pool.rs  config.rs  error.rs  errors.rs  gen.rs  inboxes.rs  lib.rs  protocol.rs  spawning.rs  test.rs
zestors-core/src/_priv/: gen.rs  mod.rs  test_helper.rs
zestors-core/src/actor/: address.rs  child.rs  child_pool.rs  errors.rs  inbox.rs  into.rs  mod.rs  send_fut.rs  shutdown.rs  spawning.rs
zestors-core/src/actor_kind/: accept.rs  accepts.rs  actor_kind.rs  dynamic.rs  mod.rs  transform.rs
zestors-core/src/actor_type/: accepts.rs  boxed_msg.rs  default_impl.rs  defines_channel.rs  dynamic.rs  mod.rs  protocol.rs
zestors-core/src/address/: dyn_address.rs  mod.rs  static_address.rs
zestors-core/src/channel/: actor_id.rs  actor_ref.rs  defines_channel.rs  dynamic.rs  halter_channel.rs  mod.rs  traits.rs
zestors-core/src/channel/inbox_channel/: mod.rs  receiving.rs  sending.rs
zestors-core/src/child/: mod.rs
zestors-core/src/config/: mod.rs
zestors-core/src/inbox/: mod.rs
zestors-core/src/messaging/: any_message.rs  box_channel.rs  boxed_msg.rs  into_recv.rs  message.rs  mod.rs  protocol.rs  rest.rs
zestors-core/src/monitoring/: actor_id.rs  channel.rs  channel_v2.rs  mod.rs
zestors-core/src/parts/: address.rs  child.rs  mod.rs
zestors-core/src/process/: address.rs  child.rs  child_pool.rs  inbox.rs  mod.rs  send_fut.rs  spawning.rs
zestors-core/src/protocol/: box_channel.rs  boxed_msg.rs  default_impl.rs  mod.rs  protocol.rs
zestors-core/src/protocol/request/: into_recv.rs
zestors-core/src/receiving/: halter.rs  inbox.rs  mod.rs
zestors-core/src/sending/: accepts.rs  address.rs  mod.rs
zestors-core/src/spawning/: mod.rs
zestors-core/src/supervision/: child.rs  defines_pool.rs  mod.rs  shutdown.rs
zestors-core/test/: main.rs
zestors-core/tests/: lib.rs  main.rs
zestors-distributed/: Cargo.toml
zestors-distributed/src/: lib.rs  node.rs
zestors-distributed/src/node/: mod.rs
zestors-distributed/src/quic/: address.rs  config.rs  message.rs  node.rs  system_quic.rs
zestors-distributed/src/system/: actor.rs  mod.rs  shared.rs
zestors-distributed/tests/: setup.rs
zestors-request/: Cargo.toml  README.md
zestors-request/src/: into_recv.rs  lib.rs  tx_rx.rs
zestors-supervision/: Cargo.toml
zestors-supervision/src/: core_traits.rs
zestors/docs/: lib.md
zestors/docs/core/: channel.md  config.md  mod.md  protocol.md  receiving.md  sending.md  spawning.md  supervision.md
zestors/examples/: actor_reference.rs  actor_type.rs  example.rs  getting_started.rs  handler.rs  messaging.rs  minimal.rs  spawning.rs  supervision.rs
zestors/examples/examples/: basic.rs  childpool_and_config.rs  supervision.rs
zestors/examples/old/: basic.rs  childpool_and_config.rs  key.rs
zestors/src/: actor.rs  actor_kind.rs  actor_type.rs  address.rs  config.rs  error.rs  helper.rs  lib.rs  macros.rs  messaging.rs  mod.rs  process.rs  protocol.rs  request.rs
zestors/src/_priv/: test_helper.rs
zestors/src/_test/: mod.rs
zestors/src/actor/: actor_state.rs  mod.rs
zestors/src/actor_ref/: actor_ref.rs  actor_reference.rs  address.rs  child.rs  child_type.rs  link.rs  mod.rs  shutdown.rs
zestors/src/actor_reference/: actor_ref.rs  address.rs  child.rs  child_type.rs  mod.rs  shutdown.rs
zestors/src/actor_type/: actor_id.rs  actor_type.rs  channel.rs  dyn_actor.rs  errors.rs  mod.rs
zestors/src/actor_type/dyn_types/: mod.rs
zestors/src/actor_type/halter/: channel.rs  mod.rs
zestors/src/actor_type/inbox/: channel.rs  mod.rs
zestors/src/channel/: accepts.rs  actor_id.rs  actor_type.rs  address.rs  channel.rs  dyn_channel.rs  errors.rs  into_address.rs  mod.rs
zestors/src/child/: child.rs  child_old.rs  is_group.rs  mod.rs  shutdown.rs
zestors/src/distributed/: conn.rs  mod.rs  system.rs
zestors/src/distribution/: conn.rs  mod.rs  system.rs
zestors/src/handler/: action.rs  core.rs  event_loop.rs  ext.rs  handler.rs  handler_ext.rs  mod.rs  scheduler.rs  state.rs  traits.rs
zestors/src/inbox/: mod.rs
zestors/src/inboxes/: mod.rs
zestors/src/messaging/: accepts.rs  box_payload.rs  envelope.rs  errors.rs  message.rs  mod.rs  protocol.rs  request.rs
zestors/src/monitoring/: actor_ref.rs  actor_reference.rs  address.rs  child.rs  child_kind.rs  mod.rs  shutdown.rs
zestors/src/old_supervision/: child_specs.rs  specifies.rs  supervisable.rs  supervisor.rs
zestors/src/process/: address.rs  child.rs  child_pool.rs  inbox.rs  send_fut.rs  spawning.rs
zestors/src/request/: into_recv.rs  mod.rs  tx_rx.rs
zestors/src/runtime/: mod.rs
zestors/src/spawning/: capacity.rs  config.rs  errors.rs  functions.rs  link.rs  mod.rs  spawn.rs  spawning_old.rs
zestors/src/supervision/: action.rs  channel_spec.rs  child_spec.rs  child_specs.rs  core_traits.rs  dyn_spec.rs  error.rs  fn_spec.rs  mod.rs  on_start_spec.rs  one_for_one_spec.rs  restart_limiter.rs  specification.rs  specifies.rs  startable.rs  supervisor.rs  trait_ext.rs  traits.rs
zestors/tests/: fn_tests.rs  lib.rs  macro.rs  macros.rs  protocol_message.rs
(+156 files in other folders)
