[package]
name = "zestors"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A simple, fast and flexible actor framework for building robust distributed applications, heavily insipired by Erlang."
repository = "https://github.com/Zestors/zestors"
keywords = ["actor", "actors", "actor-system", "actor-framework", "process"]
categories = ["asynchronous", "concurrency"]



[dependencies]
tokio = { version = "^1", features = ["full"] }
futures = "^0.3"
async-trait = "^0.1"
anyhow = "^1"
oneshot = "^0.1"
async-channel = "1.6"
zestors-codegen = "0.0.2"
derive_more = "^0.99"

# distributed only dependencies
build_id = "0.2.1"
uuid = { version = "0.8", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
bincode = "1.3"
# hyper = { version = "0.14", features = ["full"] }
indexmap = "1.8"
# h2 = "0.3.11"
tokio-tungstenite = { version = "0.16", features = ["native-tls"] }
tokio-native-tls = "0.3"
sha2 = "0.10"
chrono = { version = "0.4.19", features = ["serde"] }


# async-raft = "0.6.1"
# raft = "0.6"
# memstore = "0.2"
# slog = "2.7"
# protobuf = "2"

[dev-dependencies]
