[package]
name = "zestors"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A simple, fast and flexible actor framework for building robust distributed applications, heavily insipired by Erlang."
repository = "https://github.com/Zestors/zestors"
keywords = ["actor", "actors", "actor-system", "actor-framework", "process"]
categories = ["asynchronous", "concurrency"]

[dependencies]
zestors-core = { path = "../zestors-core" }
zestors-distributed = { path = "../zestors-distributed" }