[package]
name = "zestors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oneshot = "0.1.3"
async-channel = "1.6"
uuid = { version = "1", features = ["v4", "serde", "fast-rng"] }
serde = "1"
dyn-clone = "1"
anyhow = "1"
log = "0.4"
async-trait = "0.1"
tokio = { version = "1.18", features = ["full"] }
futures = "0.3.0"

# distr dependencies
rustls = { version = "0.20", features = ["dangerous_configuration", "quic"] }
bincode = "1.3.2"
async-bincode = "0.7"
quinn = { version = "0.8" }
rcgen = "0.9"
indexmap = "1.8"

# dev dependencies
env_logger = "0.9"
derive_more = "0.99"
thiserror = "1.0"

# Local crates
zestors-codegen = { path = "../zestors-codegen" }