[package]
name = "zestors-actor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zestors-core = { path = "../zestors-core" }
futures = "0.3.0"
tokio = { version = "1.18", features = ["full"] }
thiserror = "1.0"
async-trait = "0.1.57"