[package]
name = "zestors-actor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zestors-codegen = { path = "../zestors-codegen" }
zestors-core = { path = "../zestors-core" }
async-trait = "^0.1"
futures = "^0.3"
tokio = { version = "^1", features = ["full"] }
thiserror = "^1"