[package]
name = "zestors-channels"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "^0.3"
zestors-core = { path = "../zestors-core" }
event-listener = "^2.0"
concurrent-queue = "^1.0"
tokio = {version = "^1", features = ["full"]}
thiserror = "^1"
