[package]
name = "zestors-codegen"
version = "0.0.3"
edition = "2021"

license = "MIT OR Apache-2.0"
description = "A fast, flexible and extensible actor-framework"
repository = "https://github.com/Zestors/zestors"
homepage = "https://github.com/Zestors/zestors"
keywords = ["actor", "actor-system", "tokio", "pool"]
categories = ["concurrency"]
authors = ["jvdwrf"]

[dependencies]
syn = { version = "1.0.99", features = ["full"] }
quote = "1.0.21"
proc-macro2 = "1.0.43"
heck = "0.4.1"

[lib]
proc-macro = true
