[package]
name = "zestors-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiny-actor = { url = "https://github.com/jvdwrf/tiny-actor/tree/b730f602919194b79269ee9c00f226dfbb986209", features = ["internals"] }
futures = "0.3.0"
tokio = { version = "1.18", features = ["full"] }
thiserror = "1.0"
once_cell = "1.13"
event-listener = "2.5"