[package]
name = "zestors-core"
version = "0.0.1"
edition = "2021"

license = "MIT OR Apache-2.0"
description = "A fast, flexible and extensible actor-framework."
repository = "https://github.com/Zestors/zestors"
homepage = "https://github.com/Zestors/zestors"
keywords = ["actor", "actor-system", "tokio", "pool"]
categories = ["concurrency"]
authors = ["jvdwrf"]

[dependencies]
tiny-actor = { version = "^0.2.1", features = ["internals"] }
futures = "^0.3"
tokio = { version = "^1", features = ["full"] }
thiserror = "^1"