[package]
name = "zestors-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
internals = []

[dependencies]
event-listener = "^2.0"
futures = "^0.3"
tokio = { version = "^1.0", features = ["time", "rt", "macros"] }
concurrent-queue = "^1.0"
thiserror = "^1.0"

[dev-dependencies]
spin_sleep = "1.1"
tokio = { version = "1.18", features = ["full"] }
zestors-codegen = { path = "../zestors-codegen" }
