[package]
name = "zestors-distributed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zestors-core = { path = "../zestors-core" }
zestors-codegen = { path = "../zestors-codegen" }

futures = "^0.3"
tokio = { version = "^1", features = ["full"] }
thiserror = "^1"
bincode = "^1"
serde = "^1"
quinn = "0.8.5"
rustls = { version = "^0.20", features = ["default", "dangerous_configuration"] }
rcgen = "^0.9"