[package]
name = "zestors-distributed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zestors-core = { path = "../zestors-core" }
zestors-codegen = { path = "../zestors-codegen" }
zestors-request = { path = "../zestors-request" }

futures = "^0.3"
tokio = { version = "^1", features = ["full"] }
tokio-util = { version = "0.6.4", features = ["codec"] }
thiserror = "^1"
serde = { version = "^1", features = ["derive"] }
uuid = { version = "1.0", features = ["v4"] }
bincode = "1.3.3"
bytes = "1.2.1"