[package]
name = "zestors-request"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zestors-core = { path = "../zestors-core" }
futures = "^0.3"
tokio = { version = "^1", features = ["full"] }
thiserror = "^1"