[package]
name = "zestors-request"
version = "0.0.1"
edition = "2021"

license = "MIT OR Apache-2.0"
description = "A fast, flexible and extensible actor-framework."
repository = "https://github.com/Zestors/zestors"
homepage = "https://github.com/Zestors/zestors"
keywords = ["actor", "actor-system", "tokio", "pool"]
categories = ["concurrency"]
authors = ["jvdwrf"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zestors-core = { path = "../zestors-core" }
futures = "^0.3"
tokio = { version = "^1", features = ["full"] }
thiserror = "^1"