[package]
name = "zestors-supervision"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "^0.1"
futures = "^0.3"
thiserror = "^1"
tokio = {version = "^1", features = ["full"]}
pin-project = "1.0.12"

zestors-core = { path = "../zestors-core" }