[package]
edition = "2021"
name = "zestors"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "^0.1"
futures = "^0.3"
thiserror = "^1"
tokio = {version = "^1", features = ["full"]}
anyhow = "1.0.68"
bincode = "1.3.3"
bytes = "1.2.1"
pin-project = "1.0.12"
serde = {version = "^1", features = ["derive"]}
tokio-util = {version = "0.6.4", features = ["codec"]}
uuid = {version = "1.0", features = ["v4"]}
event-listener = "^2.0"
tokio-test = "0.4.2"

zestors-codegen = { path = "../zestors-codegen" }
concurrent-queue = "2.1.0"

[dev-dependencies]
