[package]
edition = "2021"
name = "zestors"
version = "0.1.1"

license = "MIT OR Apache-2.0"
description = "A fast and flexible actor-framework for building fault-tolerant Rust applications"
repository = "https://github.com/Zestors/zestors"
homepage = "https://github.com/Zestors/zestors"
keywords = ["actor", "actor-system", "tokio", "pool"]
categories = ["concurrency"]
authors = ["jvdwrf"]
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "^0.1"
futures = "^0.3"
thiserror = "^1"
tokio = {version = "^1", features = ["full"]}
bincode = "1.3.3"
pin-project = "1.0.12"
serde = {version = "^1", features = ["derive"]}
tokio-util = {version = "0.6.4", features = ["codec"]}
event-listener = "2.5.3"
tokio-test = "0.4.2"
concurrent-queue = "2.1.0"
eyre = "0.6.8"
# uuid = { version = "1.0", features = ["v4"] }

zestors-codegen = { path = "../zestors-codegen", version = "0.1.0" }


[dev-dependencies]
